--- a/src/index.html
+++ b/src/index.html
@@ -1,34 +1,32 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <title>Random Card Generator</title>
+    <title>Random Card</title>
   </head>
-
   <body>
-    <div class="card">
-      <div class="headCard ">
-        <div class="palo">♥️️</div>
-      </div>
-
-      <div class="centerCard ">
-        <p><strong>K</strong></p>
-      </div>
-
-      <div class="bottomCard ">
-        <div class="palo2">♥️️</div>
+    <div class="row justify-content-center my-5">
+      <div class="col-4 d-flex justify-content-center">
+        <button id="btn_add_card" type="button" class="btn btn-primary">
+          ¡Coge tu carta!
+        </button>
       </div>
     </div>
 
-    <script type="text/javascript" src="app.js"></script>
+    <div class="row">
+      <div id="card" class="container">
+        <h2 class="palo"><i class="bi bi-suit-heart-fill"></i></h2>
+
+        <div class="text-center d-flex justify-content-center">
+          <h1 id="number" class="p-5 number_size">9</h1>
+        </div>
+        <div class="d-flex justify-content-end">
+          <h2 class="palo palo_Down">
+            <i class="bi bi-suit-heart-fill"></i>
+          </h2>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
